--- a/src/mixins.scss
+++ b/src/mixins.scss
@@ -31,3 +31,9 @@
     padding: 0.75em 2em;
     box-sizing: border-box;
 }
+
+@mixin mobile-screen {
+    @media screen and (max-width: $mobile-screen-breakpoint) {
+        @content;
+    }
+}
